--- a/style.css
+++ b/style.css
@@ -101,6 +101,12 @@ button:focus-visible {
   background-color: #242424;
 }
 
+.hero {
+  background-color: rgba(255, 0, 0, 0.16);
+  padding: 1em;
+  border-radius: 0.6em;
+}
+
 h1 {
   font-size: 2.2em;
   line-height: 1.1;
@@ -130,6 +136,18 @@ h2, img {
   letter-spacing: 0.4em;
 }
 
+.title a {
+  text-decoration: none;
+  color: white;
+  font-size: 0.5em;
+  display: block;
+  transition: color 0.2s;
+}
+
+.title a:hover {
+  color: #646cff;
+}
+
 .mars {
   color: indianred;
 }
@@ -148,8 +166,8 @@ h2, img {
   display: flex;
   flex-direction: column;
   align-items: center; /* Centers the photo and info */
-  background-color: #333; /* Optional: adds background color */
-  padding: 10px; /* Optional: adds padding around the photo and info */
+  background-color: #333;
+  padding: 10px; 
   border-radius: 8px;
   margin-bottom: 4em;
 }
@@ -161,6 +179,16 @@ h2, img {
 
 .photo-info {
   color: #FFFFFF;
-  text-align: left; /* Centers the text under the photo */
+  text-align: left;
   margin-top: 0.5em; /* Adds space between the photo and text */
+  font-family: 'Courier New', Courier, monospace;
+  font-size: 0.8rem;
+  padding: 2em 0 0 0;
+}
+
+.photo-info:nth-of-type(2) {
+  padding: 0;
+  color: #646cff;
+  font-family: Arial, Helvetica, sans-serif;
+  text-transform: uppercase;
 }
